Migrate to Gradle Kotlin DSL (#1360)
- Migrates to Gradle Kotlin DSL
- Applies code inspection hints
- Updates project configuration
- Fixes Nexus Index Scan execution args in pipeline
- Improves up-to-date evaluations

{minor}

Signed-off-by: Esta Nagy <nagyesta@gmail.com>